# Opposition-charts-app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
assets/themes/: athletic.yaml  athletic_dark.yaml  club_theme.yaml  dark.yaml  hudl.yaml  light.yaml  opta_dark.yaml  opta_light.yaml  presentation.yaml  print.yaml  sofa_light.yaml  statsbomb.yaml  tv_broadcast.yaml  wyscout.yaml
config/: defaults.yaml  settings.local.yaml.example
data/: sample_open_play_data.csv
docs/: ARCHITECTURE.md  AUTHENTICATION.md  IDENTITY.md  PHASE7_NOTES.md  PLUGIN_SDK.md  phase_s1.patch
scripts/: manage_users.py  run_tests.sh
src/fap/: __init__.py  bootstrap.py
src/fap/analytics/: __init__.py  insights.py
src/fap/auth/: __init__.py  base.py  local.py  workflow.py
src/fap/cache/: __init__.py  backends.py  manager.py
src/fap/config/: __init__.py  settings.py
src/fap/core/: __init__.py  discovery.py  events.py  exceptions.py  (+5 more)
tests/: conftest.py  deep_validate.py  test_app_shell.py  test_auth_workflow.py  test_cache.py  test_column_mapping.py  test_data_engine.py  test_export_and_themes.py  test_identity.py  test_match_analysis_library.py  test_openplay_import.py  test_openplay_migration.py  test_performance_and_providers.py  test_persistence.py  test_phase7.py  test_pipeline.py  test_platform_bootstrap.py  test_plugin_registry.py  test_provider_intelligence.py  test_providers.py  test_report_editor.py  test_reports.py  test_stabilization_s1.py  test_theme.py  test_themes.py  test_visual_framework.py  test_workspace.py
(+232 files in other folders)
